2000-04-28  Kingpin  <mthurn@tasc.com>

	* VERSION 2.11 RELEASED

2000-04-27  Kingpin  <mthurn@tasc.com>

	* test.pl: new test case for gui_query

	* Yahoo.pm: new URL for gui_query

2000-04-03  Kingpin  <mthurn@tasc.com>

	* VERSION 2.09 RELEASED

2000-03-27  Kingpin  <mthurn@tasc.com>

	* test.pl: updated test cases

	* Yahoo.pm: (2.09) fixed for new CGI options

2000-03-20  Kingpin  <mthurn@tasc.com>

	* test.pl: added "real" test

Revision history for Perl extension WWW::Search::Yahoo.

2.07  Fri Feb  4 10:01:42 2000
	- original version; created by h2xs 1.19
