@@ -1,3 +1,7 @@
+2000-05-10  Kingpin  <mthurn@tasc.com>
+
+	* Yahoo.pm: fixed parsing for all sections of gui_query results
+
 2000-04-28  Kingpin  <mthurn@tasc.com>
 
 	* VERSION 2.11 RELEASED
